IE select box width/cutoff fix
Former-commit-id: d9568e460f0c75cfc204d5df737f40850ff7e4f6

--- a/app/assets/scss/components/_form.scss
+++ b/app/assets/scss/components/_form.scss
@@ -116,8 +116,6 @@
 	   max-width: 100%;
 	
 	   .ie & {
-		   min-width: 150px;
-		   max-width: 293px;
 		   height: auto;
 		   font-size: 15px
 	   }
